--- a/code/4.重建二叉树.md
+++ b/code/4.重建二叉树.md
@@ -1,8 +1,14 @@
 # 4.重建二叉树
 
-##
+## 题目描述
+输入某二叉树的前序遍历和中序遍历的结果，请重建出该二叉树。假设输入的前序遍历和中序遍历的结果中都不含重复的数字。例如输入前序遍历序列{1,2,4,7,3,5,6,8}和中序遍历序列{4,7,2,1,5,3,8,6}，则重建二叉树并返回。
 
-##
+## 解题思路
+1. 这里使用的是递归
+2. 前序遍历(pre)的第一个`pre[0]`必是当前的root节点
+3. 中序遍历(vin)到`pre[0]`的这一段必是当前的左子树，`pre[0]`到最后的必是当前的右子树
+
+## Code
 ```javascript
 /* function TreeNode(x) {
     this.val = x;
@@ -12,14 +18,14 @@
 function reConstructBinaryTree(pre, vin)
 {
     // write code here
-    if (!pre || pre.length === 0) {
+    if (pre.length == 0) {
         return ;
     }
     var treeNode = {
         val: pre[0]
     }
     for(var i=0; i<pre.length; i++){
-        if(vin[i]===pre[0]){
+        if(vin[i]==pre[0]){
             treeNode.left = reConstructBinaryTree(pre.slice(1,i+1),vin.slice(0,i));
             treeNode.right = reConstructBinaryTree(pre.slice(i+1),vin.slice(i+1));
         }
