--- a/code-C++/3.从尾到头打印链表.md
+++ b/code-C++/3.从尾到头打印链表.md
@@ -12,7 +12,7 @@
 
 - c++的vector可以用`insert()`函数来向指定位置插入元素，`arr.begin()`表示在头部，`arr.end()`表示在尾部。例如：
 
-```c++
+```cpp
 //在头部插入10
 arr.insert(arr.begin(),10);
 //在尾部插入8
@@ -22,7 +22,7 @@ arr.insert(arr.end(),8);
 
 ## 答案
 
-```c++
+```cpp
 /**
 *  struct ListNode {
 *        int val;
