--- a/code-JavaScript/21.栈的压入、弹出序列.md
+++ b/code-JavaScript/21.栈的压入、弹出序列.md
@@ -1,5 +1,9 @@
 # 21.栈的压入、弹出序列
 
+[《剑指Offer》刷题GitHub链接](https://github.com/zhning12/Coding-Interviews)
+
+[题目链接](https://www.nowcoder.com/practice/d77d11405cc7470d82554cb392585106?tpId=13&tqId=11174&rp=2&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking&tPage=2)
+
 ## 题目描述
 输入两个整数序列，第一个序列表示栈的压入顺序，请判断第二个序列是否可能为该栈的弹出顺序。假设压入栈的所有数字均不相等。例如序列1,2,3,4,5是某栈的压入顺序，序列4,5,3,2,1是该压栈序列对应的一个弹出序列，但4,3,5,1,2就不可能是该压栈序列的弹出序列。（注意：这两个序列的长度是相等的）
 
@@ -37,3 +41,4 @@ function IsPopOrder(pushV, popV)
     }
 }
 ```
+
