--- a/code-JavaScript/24.二叉树中和为某一值的路径.md
+++ b/code-JavaScript/24.二叉树中和为某一值的路径.md
@@ -1,4 +1,4 @@
-# 23.二叉搜索树的后序遍历序列
+# 24.二叉树中和为某一值的路径
 [《剑指Offer》刷题GitHub链接](https://github.com/zhning12/Coding-Interviews)
 
 [题目链接](https://www.nowcoder.com/practice/b736e784e3e34731af99065031301bca?tpId=13&tqId=11177&rp=2&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking)
