--- a/code-JavaScript/26.二叉搜索树与双向链表.md
+++ b/code-JavaScript/26.二叉搜索树与双向链表.md
@@ -46,7 +46,8 @@ function Convert(root)
     while(tmp && tmp.right){
         tmp = tmp.right;
     }
-    //将左双向链表最后一个节点和当前节点连接起来
+    //若左子树存在，将左双向链表最后一个节点和当前节点连接起来
+    //注意这里，tmp与left的存在与否完全相同
     if(tmp){
         tmp.right = root;
         root.left = tmp;
@@ -93,6 +94,7 @@ function Convert(root)
     var left = Convert(root.left);
     
     //若左子树存在，则将左双向链表最后一个节点与当前节点连接起来
+    //这里，leftLast和left的存在与否并不完全一致哦！
     if(left){
         leftLast.right = root;
         root.left = leftLast;
