--- a/code-JavaScript/29.最小的K个数.md
+++ b/code-JavaScript/29.最小的K个数.md
@@ -1,10 +1,10 @@
-# 28.最小的K个数
+# 29.最小的K个数
 [《剑指Offer》刷题GitHub链接](https://github.com/zhning12/Coding-Interviews)
 
 [题目链接](https://www.nowcoder.com/practice/6a296eb82cf844ca8539b57c23e6e9bf?tpId=13&tqId=11182&rp=2&ru=%2Fta%2Fcoding-interviews&qru=%2Fta%2Fcoding-interviews%2Fquestion-ranking)
 
 ## 题目描述
-输入n个整数，找出其中最小的K个数。例如输入4,5,1,6,2,7,3,8这8个数字，则最小的4个数字是1,2,3,4,。
+输入n个整数，找出其中最小的K个数。例如输入4,5,1,6,2,7,3,8这8个数字，则最小的4个数字是1,2,3,4。
 
 ## 解题思路
 
