--- a/code-JavaScript/3.从尾到头打印链表.md
+++ b/code-JavaScript/3.从尾到头打印链表.md
@@ -1,5 +1,9 @@
 # 3. 从尾到头打印链表
 
+[《剑指Offer》刷题GitHub链接](https://github.com/zhning12/Coding-Interviews)
+
+[题目链接](https://www.nowcoder.com/practice/d0267f7f55b3412ba93bd35cfa8e8035?tpId=13&tqId=11156&rp=1&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking)
+
 ## 题目描述
 
 输入一个链表，按链表值从尾到头的顺序返回一个ArrayList。
