--- a/code-JavaScript/4.重建二叉树.md
+++ b/code-JavaScript/4.重建二叉树.md
@@ -1,5 +1,9 @@
 # 4.重建二叉树
 
+[《剑指Offer》刷题GitHub链接](https://github.com/zhning12/Coding-Interviews)
+
+[题目链接](https://www.nowcoder.com/practice/8a19cbe657394eeaac2f6ea9b0f6fcf6?tpId=13&tqId=11157&rp=1&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking)
+
 ## 题目描述
 输入某二叉树的前序遍历和中序遍历的结果，请重建出该二叉树。假设输入的前序遍历和中序遍历的结果中都不含重复的数字。例如输入前序遍历序列{1,2,4,7,3,5,6,8}和中序遍历序列{4,7,2,1,5,3,8,6}，则重建二叉树并返回。
 
