--- a/code-JavaScript/5.用两个栈实现队列.md
+++ b/code-JavaScript/5.用两个栈实现队列.md
@@ -1,5 +1,9 @@
 # 5.用两个栈实现队列
 
+[《剑指Offer》刷题GitHub链接](https://github.com/zhning12/Coding-Interviews)
+
+[题目链接](https://www.nowcoder.com/practice/54275ddae22f475981afa2244dd448c6?tpId=13&tqId=11158&tPage=1&rp=1&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking)
+
 ## 题目描述
 用两个栈来实现一个队列，完成队列的Push和Pop操作。 队列中的元素为int类型。
 
@@ -13,6 +17,13 @@
 **出栈：**
 - 如果栈B为空，从栈A出，入栈B（栈A pop，栈B push）；
 - 如果栈B不为空，直接从栈B出栈
+
+> e.g. 先放入1，2，3，4，然后弹出1，再放入5，6，7，再弹出2：
+> 1. `A:[1,2,3,4]`； `B:[]`
+> 2. `A:[]`； `B:[4,3,2,1]`，pop出1
+> 3. `A:[5,6,7]`； `B:[4,3,2]`
+> 4. `A:[5,6,7]`； `B:[4,3,2]`，此时stackB不为空，不用从A进入B，直接从B中pop出2
+> 5. 结果状态：`A:[5,6,7]`； `B:[4,3]`
 
 ## Code
 ```javascript
