add a function to js 1

--- a/code-JavaScript/1.二维数组的查找.md
+++ b/code-JavaScript/1.二维数组的查找.md
@@ -13,6 +13,8 @@
 2. 通用解法：从左下角开始，大于该位数则向右移，小于该位数则向上移。
 
 ## Code
+
+**思路1：**
 ```javascript
 function Find(target, array)
 {
@@ -28,6 +30,29 @@ function Find(target, array)
             }
         }
     }
+    return false;
+}
+```
+
+**思路2：**
+```javascript
+function Find(target, array)
+{
+    // write code here
+    var len = array[0].length;
+    var i = array.length - 1;
+    var j = 0;
+    while(i>=0 && j<len){
+        if(array[i][j] === target){
+            return true;
+        }
+        else if(array[i][j] > target){
+                i--;
+            }
+        else{
+                j++;
+            }
+        }
     return false;
 }
 ```
