add a function to  js 2

--- a/code-JavaScript/2.替换空格.md
+++ b/code-JavaScript/2.替换空格.md
@@ -14,6 +14,7 @@
 2. 如果这里使用`str2[i]=str[i]`这样的操作，则因为str2为空字符串，不会得到赋值，所以应该用`+=`来往str2上面添加。
 
 ## Code
+方案1：使用新字符串进行拼接
 ```javascript
 function replaceSpace(str)
 {
@@ -28,5 +29,17 @@ function replaceSpace(str)
         }
     }
     return str2;
+}
+```
+方案2：使用js正则表达式
+
+[正则表达式使用链接](https://blog.csdn.net/zhning12L/article/details/87924112)
+
+```javascript
+function replaceSpace(str)
+{
+    // write code here
+    var ans = str.replace(/\s/g,'%20');
+    return ans;
 }
 ```
