--- a/code-JavaScript/8.跳台阶.md
+++ b/code-JavaScript/8.跳台阶.md
@@ -8,7 +8,7 @@
 一只青蛙一次可以跳上1级台阶，也可以跳上2级。求该青蛙跳上一个n级的台阶总共有多少种跳法（先后次序不同算不同的结果）。
 
 ## 解题思路
-有n层台阶时，相当于有 `跳一个台阶+(n-1)层台阶的跳法` + `跳两个台阶+(n-2)层台阶的跳法`。
+有n层台阶时，相当于有 `第一跳跳一个台阶+(n-1)层台阶的跳法` + `第一跳跳两个台阶+(n-2)层台阶的跳法`。
 
 所以，其实这是斐波那切数列的变种，解法同`7.斐波那切数列`
 
