--- a/code-JavaScript/17.树的子结构.md
+++ b/code-JavaScript/17.树的子结构.md
@@ -11,8 +11,6 @@
 ## 解题思路
 树的解法优先考虑递归。
 
-`子树!== 树的一部分`
-
 按先序遍历树B的每个结点，判断结点是否和树A的根结点相同。若相同，再判断以该结点为根结点的树是否有和树A相同的子树。
 
   
@@ -39,8 +37,7 @@ function HasSubtree(pRoot1, pRoot2)
     if(pRoot1 === null || pRoot2 === null){
         return false;
     }
-    return isSubtree(pRoot1,pRoot2) || isSubtree(pRoot1.right,pRoot2) || isSubtree(pRoot1.left,pRoot2);
+    return isSubtree(pRoot1,pRoot2) || HasSubtree(pRoot1.right,pRoot2) || HasSubtree(pRoot1.left,pRoot2);
 }
-
 ```
 
