--- a/code-JavaScript/30.连续子数组的最大和.md
+++ b/code-JavaScript/30.连续子数组的最大和.md
@@ -14,7 +14,7 @@ HZ偶尔会拿些专业问题来忽悠那些非计算机专业的同学。今天
 
 - 当当前和为正时，始终加入新的数。
 
-- 当当前变量为负时，更新当前变量为下一个数。
+- 当当前变量为负时，更新当前变量为下一个数(因为当前变量`array[i]`已经是负的了，那么无论如何 `array[i+1] > array[i] + array[i+1]` 恒成立。
 
 - 与最大值比较，若大于最大值则更新最大值。
 
@@ -26,7 +26,7 @@ function FindGreatestSumOfSubArray(array)
 {
     // write code here
     var len = array.length;
-    var maxSum = array[0],currSum = array[0];
+    var maxSum = array[0], currSum = array[0];
     
     for(var i = 1; i < len; i++){
         if(currSum < 0){
