--- a/code-JavaScript/31.整数中1出现的次数（从1到n整数中1出现的次数）.md
+++ b/code-JavaScript/31.整数中1出现的次数（从1到n整数中1出现的次数）.md
@@ -8,11 +8,36 @@
 
 ## 解题思路
 
+将每一位上1出现的次数加起来，就是所求的总次数了。
 
+我们以百位为例子，在 `12x45` 中，百位为 `x` ，那么百位前的数字为 `12`，百位后的数字为 `45`。此时分为3种情况：
+- ` x == 0`，这时候后面的数字对百位上1的出现次数是没有影响的，只受前面数字的影响，即： `12 * 100`，100为百位的位数。
+- ` x == 1`，此时既受前面数字的影响也受后面数字的影响，因为在 `12 * 100`后，1又出现了后面数字+1那么多次（从 `12100`到`12145` ），即 `12 * 100 + 45 + 1`。
+- ` x > 1`，此时因为必然包含 `12100-12199` 共100（百位的位数）个1，所以百位上1出现的次数也与后面的数字没有关系，为 `12 * 100 + 100` 即 `(12 + 1) * 100`。
 
 ## Code
 
 
 ```javascript
-
+function NumberOf1Between1AndN_Solution(n)
+{
+    // write code here
+    var count = 0;
+    var i = 1;
+    var pre = 0, back = 0, cur = 0;
+    while(n >= i){
+        pre = parseInt(n / (i * 10));
+        back = n - parseInt(n / i) * i;
+        cur = parseInt(n / i) % 10;
+        if(cur == 0){
+            count += pre * i;
+        }else if(cur == 1){
+            count += pre * i + back + 1;
+        }else{
+            count += (pre + 1) * i
+        }
+        i *= 10;
+    }
+    return count;
+}
 ```
