--- a/code-JavaScript/34. 第一次只出现一次的字符.md
+++ b/code-JavaScript/34. 第一次只出现一次的字符.md
@@ -11,7 +11,7 @@
 
 遍历两次：
 
-1. 将元素放入对象`count`作计数，第一次出现，置为`true`，第二次及以后为`false`
+1. 将元素放入对象`count`作计数，第一次出现，置为`true`，第二次及以后为`false`（此处只出现一次和出现多次的标记可以任意指定，不同就可以）
 2. 从前往后遍历`str`（这样可以保证返回的是**第一个**只出现一次的字符），每一个check一下在count中的值是否为`true`，是的话就是所要找的值，返回它的`index`即可
 
 P.S.  默认返回`-1`，这样找不到该数时会返回`-1`
