--- a/code-JavaScript/40.平衡二叉树.md
+++ b/code-JavaScript/40.平衡二叉树.md
@@ -17,7 +17,7 @@
 
 思路：
 - 暴力解法： 借助求树高度的method，递归判断每一个节点及其左右子树，但是这样做会出现很多重复操作，明显不是最优
-- 从下往上遍历：
+- 从下往上遍历（后序遍历）：
   - 若子树为平衡二叉树，则返回子树的高度
   - 若子树不是平衡二叉树，则停止遍历（因为此时该二叉树必定不是平衡二叉树）
 
@@ -36,11 +36,11 @@ function IsBalanced_Solution(pRoot)
 {
     // write code here
     function getDepth(pRoot){
-        if(pRoot == null) return 0;
-        var right = getDepth(pRoot.right);
-        if(right === -1) return -1;
+        if(pRoot == null) return 0;       
         var left = getDepth(pRoot.left);
         if(left === -1) return -1;
+        var right = getDepth(pRoot.right);
+        if(right === -1) return -1;
         return Math.abs(right - left) > 1 ? -1 : Math.max(right + 1, left + 1);
     }
     return getDepth(pRoot) !== -1;
