--- a/code-JavaScript/34.第一个只出现一次的字符位置.md
+++ b/code-JavaScript/34.第一个只出现一次的字符位置.md
@@ -1,4 +1,4 @@
-# 34. 第一次只出现一次的字符
+# 34. 第一个只出现一次的字符位置
 [《剑指Offer》刷题GitHub链接](https://github.com/zhning12/Coding-Interviews)
 
 [题目链接](https://www.nowcoder.com/practice/1c82e8cf713b4bbeb2a5b31cf5b0417c?tpId=13&tqId=11187&rp=2&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking)
