git add js 40, 46

--- a/code-JavaScript/40.数组中只出现一次的数字.md
+++ b/code-JavaScript/40.数组中只出现一次的数字.md
@@ -9,11 +9,95 @@
 
 ## 解题思路
 
+- 方法一： 暴力解法
+  - 很简单的通用解法，遍历计数，再次遍历找出即可
 
+
+- 方法二： js技巧解法
+  - js中有两个函数:`Array.prototype.indexOf()`和`Array.prototype.lastIndexOf()`,可返回某个指定的字符串值在字符串中首次（最后一次）出现的位置，没有则返回-1。检测首次和尾次的index是否一致即可。
+
+
+- **方法三（灵魂解法）：利用异或的性质**
+  - 注意题眼：所有其他的数字都出现了两次，为什么要强调是**两次**？
+  - 异或性质：
+    - 相同的数，异或结果为0；
+    - 一个数和0做异或，结果为0。
+  - 因此，将该数组中所有数字做异或，出现了两次的数字会互相抵消，最后剩下的为两个只出现一次的数字（假设为A,B)的异或结果C。
+  - 根据C中最低位（方便计算）的1（即A,B不同的那一位），将array分成两组，必然出现：每一组里面除了A/B,剩下的数字都是两两出现的，可以抵消，那么做异或剩下的就是A和B。
 
 ## Code
 
-
+- 方法一：暴力解法
 ```javascript
+function FindNumsAppearOnce(array)
+{
+    // write code here
+    // return list, 比如[a,b]，其中ab是出现一次的两个数字
+    var resList = [];
+    var list = [];
+    if(array.length <= 2) return array;
+    for(var a of array){
+        if(list[a] === undefined){
+            list[a] = 1;
+        }else list[a]++;
+    }
+    for(var l in list){
+        if(list[l] === 1){
+            resList.push(l);
+            if(resList.length === 2){
+                return resList;
+            }
+        }
+    }
+}
+```
 
+- 方法二：js技巧解法
+```javascript
+function FindNumsAppearOnce(array)
+{
+    // write code here
+    // return list, 比如[a,b]，其中ab是出现一次的两个数字
+    var arr = [];
+    for(var i = 0; i < array.length; i++) {
+        if(array.indexOf(array[i]) === array.lastIndexOf(array[i])) {
+            arr.push(array[i]);
+        }
+    }
+    return arr;
+}
+```
+
+- 方法三：异或性质解法
+```javascript
+function FindNumsAppearOnce(array)
+{
+    // write code here
+    // return list, 比如[a,b]，其中ab是出现一次的两个数字
+    if(array.length <= 2){
+        return array;
+    }
+    var bitResult = 0;
+    for(var a of array){
+        bitResult ^= a;
+    }
+    if(bitResult === 0) return ;
+    var index = 0;
+    //与操作，相同为1，不同为0
+    while((bitResult & 1) === 0){
+        bitResult = bitResult >> 1;
+        index++;
+    }
+    var num1 = 0;
+    var num2 = 0;
+    for(var a of array){
+        if((a >> index) & 1 === 1){
+            num1 = num1 ^ a;
+        }else{
+            num2 = num2 ^ a;
+        }
+    }
+    var resList = [num1,num2];
+    return resList;
+}
 ```
